warnings cleanup